--- a/ArchivosSecuenciales/ArchivosSecuenciales/ArchivosSecuenciales.csproj
+++ b/ArchivosSecuenciales/ArchivosSecuenciales/ArchivosSecuenciales.csproj
@@ -88,11 +88,23 @@
     <Compile Include="DialogBoxBuscarSemestre.Designer.cs">
       <DependentUpon>DialogBoxBuscarSemestre.cs</DependentUpon>
     </Compile>
+    <Compile Include="DialogBoxModificar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DialogBoxModificar.Designer.cs">
+      <DependentUpon>DialogBoxModificar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormsProgreso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormsProgreso.Designer.cs">
+      <DependentUpon>FormsProgreso.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,8 +130,14 @@
     <EmbeddedResource Include="DialogBoxBuscarSemestre.resx">
       <DependentUpon>DialogBoxBuscarSemestre.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DialogBoxModificar.resx">
+      <DependentUpon>DialogBoxModificar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormsProgreso.resx">
+      <DependentUpon>FormsProgreso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
